--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="author" content="zendoc – physician meditator developer">
-  <meta name="description" content="mindfulness hypnagogic meditation, sleep toy, invitation to trance by observing state of consciousness just before falling asleep">
-  <meta name="keywords" content="meditation, sleep, insomnia, melatonin, chillout, relax, soothing, consciousness">
+  <meta name="description" content="mindfulness hypnagogic meditation, sleep toy, invitation to trance by observing state of consciousness just before falling asleep. To catch the moment of falling asleep, observe stages of consciousness while resisting falling asleep.">
+  <meta name="keywords" content="meditation, sleep, insomnia, melatonin, chillout, relax, soothing, consciousness, lucid, dream">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,12 +18,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>trancer3 – hypnagogic meditation</title>
+  <title>trancer3 – mindfulness hypnagogic meditation</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "749413704";
+    const serviceWorkerVersion = "2640780534";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
